[tool.poetry]
name = "data-science-blog"
version = "0.1.0"
description = ""
authors = ["Jakub <jakub.zapletal@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.10.0"}
plotly = "^5.24.1"
nbformat = "^5.10.4"
isort = "^5.13.2"
kaleido = "0.2.1"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
